feat: se completó el ejercicio 4

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
             <!--resultado 4-->
             <div style="color:#13be0d">
                 <p> -Resultado- </p>
-                <ul id=""></ul>
+                <ul id="common course"></ul>
             </div>
         </section>
 
         <!--Ejercicio 5-->
         <section class="container text-info mt-4">
             <div>
-                <h2 style="color:#e7b307">5. Array</h2>
+                <h2 style="color:#f126b4">5. Array</h2>
                 <div class="text-dark">
                     <p> Para cada uno de los ejercicios siguientes, suponga que está comenzando con la siguiente matriz
                         de
@@ -133,17 +133,17 @@
                 </div>
             </div>
             <!--resultado 5-->
-            <div style="color:#e7b307">
+            <div style="color:#f126b4">
                 <p> -Resultado- </p>
                 <ul>
-                    <li id=""></li>
-                    <li id=""></li>
-                    <li id=""></li>
-                    <li id=""></li>
-                    <li id=""></li>
-                    <li id=""></li>
-                    <li id=""></li>
-                    <li id=""></li>
+                    <li id="array"></li>
+                    <li id="dani_eliminado"></li>
+                    <li id="juan_eliminado"></li>
+                    <li id="mover_luis"></li>
+                    <li id="mi_nombre"></li>
+                    <li id="maria"></li>
+                    <li id="indexOfMaria"></li>
+                    <li id="finalArray"></li>
                 </ul>
             </div>
         </section>
