feat: se completó el ejercicio 5 y se hicieron cambios en el html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                 </p>
                 <!--resultado 1-->
                 <div style="color:#AA3378">
-                    <p> -Resultado-</p>
-                    <ul id="sentence"></ul>
+                    <strong>
+                        <p> -Resultado-</p>
+                        <ul id="sentence"></ul>
+                    </strong>
                 </div>
             </div>
         </section>
@@ -63,8 +65,10 @@
                 </div>
                 <!--resultado 2-->
                 <div style="color:#763682">
+                    <strong>
                     <p> -Resultado- </p>
-                    <ul id="double-numbers"></ul>
+                    <ul id="doubleNumbers"></ul>
+                </strong>
                 </div>
             </div>
         </section>
@@ -84,9 +88,11 @@
             </div>
             <!--resultado 3-->
             <div style="color:#f55414">
+                <strong>
                 <p> -Resultado- </p>
                 <ul id="summary"></ul>
                 <ul id="product"></ul>
+            </strong>
             </div>
         </section>
 
@@ -102,8 +108,10 @@
             </div>
             <!--resultado 4-->
             <div style="color:#13be0d">
+                <strong>
                 <p> -Resultado- </p>
-                <ul id="common course"></ul>
+                <ul id="commonCourse"></ul>
+            </strong>
             </div>
         </section>
 
@@ -134,16 +142,18 @@
             </div>
             <!--resultado 5-->
             <div style="color:#f126b4">
+                <strong>
                 <p> -Resultado- </p>
                 <ul>
                     <li id="array"></li>
-                    <li id="dani_eliminado"></li>
-                    <li id="juan_eliminado"></li>
-                    <li id="mover_luis"></li>
-                    <li id="mi_nombre"></li>
+                    <li id="daniEliminado"></li>
+                    <li id="juanEliminado"></li>
+                    <li id="moverLuis"></li>
+                    <li id="miNombre"></li>
                     <li id="indexOfMaria"></li>
                     <li id="finalArray"></li>
                 </ul>
+            </strong>
             </div>
         </section>
 
